--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -129,7 +129,7 @@
 }
 
 .profile__input {
-  margin-top: 226px;
+  margin-top: 96px;
   color: #000;
   border: none;
   width: 345px;
@@ -171,7 +171,34 @@
 }
 
 .profile__title {
-  margin-top: 226px;
+  margin-top: 113px;
+  margin-bottom: 0px;
+  color: #000;
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.profile__title_hidden {
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__title {
+    margin-top: 236px;
+  }
+}
+
+@media screen and (max-width: 670px) {
+  .profile__title {
+    margin-top: 70px;
+  }
+}
+
+.profile__subtitle {
+  margin-top: 96px;
   color: #000;
   width: 45px;
   border: none;
@@ -183,7 +210,8 @@
   overflow: hidden;
   text-align: left;
 }
-.profile__title:nth-child(even) {
+
+.profile__subtitle:nth-child(even) {
   margin-top: 7px;
   border-bottom: none;
 }
