--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -49,8 +49,7 @@
 @media screen and (max-width: 768px) {
   .promo__title {
     text-align: center;
-    margin: 0 38px 0 38px;
-    margin-left: 38px;
+    margin: 0 auto 0 auto;
   }
 }
 
