fix register and naming file

--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -30,7 +30,7 @@
   width: 26px;
   height: 30px;
   background-color: #f4f4f4;
-  background-image: url(../../images/Account.svg);
+  background-image: url(../../images/Account_1.svg);
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
