--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,7 +15,7 @@
 
 .movies-card__delete {
   color: #000;
-  background-image: url(../../images/Dislike.svg);
+  background-image: url(../../images/Dislike_1.svg);
   background-repeat: no-repeat;
   background-color: #f4f4f4;
   background-position: center;
@@ -66,7 +66,7 @@
 
 .movies-card__liked {
   color: #000;
-  background-image: url(../../images/Like.svg);
+  background-image: url(../../images/Like_1.svg);
   background-repeat: no-repeat;
   background-color: #ee3465;
   background-position: center;
