--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -23,18 +23,22 @@
   font-size: 10px;
   font-style: normal;
   font-weight: 400;
-  width: 21px;
-  height: 21px;
+  width: 23px;
+  height: 23px;
   border-radius: 50%;
   cursor: pointer;
   grid-column: 2/3;
   grid-row: 1;
-  margin: 14px;
+  margin: 13px;
   justify-self: end;
   padding: 0;
-  opacity: 0;
-  transition: opacity 0.5s;
+  z-index: 2;
 }
+
+.movies-card__delete_disable {
+  z-index: -1;
+}
+
 .movies-card__delete_mobile {
   opacity: 1;
 }
@@ -45,21 +49,21 @@
   height: 201px;
   border-radius: 6px;
   object-position: center;
-  max-width: 360px;
+  width: 360px;
   grid-row: 1;
   grid-column: 1/3;
 }
 
 @media screen and (max-width: 1220px) {
   .movies-card__image {
-    max-width: 339px;
+    width: 339px;
     height: 190px;
   }
 }
 
 @media screen and (max-width: 750px) {
   .movies-card__image {
-    max-width: 300px;
+    width: 300px;
     height: 168px;
   }
 }
@@ -83,6 +87,18 @@
   margin: 14px;
   justify-self: end;
   padding: 0;
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+  transition: opacity 1s;
+}
+
+.movies-card__liked_disable {
+  visibility: hidden;
+  opacity: 0;
+  z-index: 0;
+  transition: visibility 1s,z-index 1s,opacity 1s;
+  transition-delay: 1s;
 }
 
 .movies-card__save {
@@ -101,8 +117,16 @@
   margin: 14px;
   justify-self: end;
   padding: 0;
+  user-select: none;
+  visibility: visible;
   opacity: 0;
-  transition: opacity 0.5s;
+  z-index: 1;
+  transition: opacity 1s;
+}
+
+.movies-card__save_disable {
+  visibility: hidden;
+  z-index: 0;
 }
 
 .movies-card__save_mobile {
@@ -115,7 +139,7 @@
   background-color: #f4f4f4;
   color: #a0a0a0;
   border-radius: 3px;
-  max-width: 52px;
+  max-width: 57px;
   height: 18px;
   text-align: center;
   grid-row: 2;
@@ -127,7 +151,7 @@
 .movies-card__title {
   font-size: 13px;
   font-weight: 500;
-  max-width: 250px;
+  max-width: 240px;
   margin: 14px 14px 0 14px;
   grid-column: 1/3;
   grid-row: 2;
@@ -143,6 +167,6 @@
 
 @media screen and (max-width: 750px) {
   .movies-card__title {
-    max-width: 220px;
+    max-width: 200px;
   }
 }
