--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -7,6 +7,7 @@
   font-weight: 400;
   margin-top: 246px;
   margin-bottom: 40px;
+  user-select: none;
 }
 
 @media screen and (max-width: 670px) {
@@ -28,6 +29,7 @@
   font-size: 16px;
   margin: 0;
   margin-bottom: 185px;
+  user-select: none;
 }
 
 @media screen and (max-width: 670px) {
@@ -47,6 +49,7 @@
   color: #3456f3;
   text-decoration: none;
   transition: opacity 0.5s;
+  user-select: none;
 }
 
 @media screen and (max-width: 670px) {
