--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -3,6 +3,13 @@
   margin: auto;
 }
 
+@media screen and (max-width: 1278px) {
+  .savedmovies {
+    max-width: 95%;
+  }
+}
+
+
 @media screen and (max-width: 340px) {
   .savedmovies {
     max-width: 98%;
