--- a/src/components/Autorization/Autorization.css
+++ b/src/components/Autorization/Autorization.css
@@ -13,9 +13,11 @@
 .autorization__alarm {
   color: #ee3465;
   font-size: 10px;
-  margin: 0 0 0 0;
+  margin: 5px 0 0 0;
   opacity: 0;
   transition: opacity 0.5s;
+  min-height: 11.5px;
+  user-select: none;
 }
 
 .autorization__alarm_active {
@@ -48,6 +50,7 @@
   padding: 0;
   cursor: pointer;
   transition: opacity 0.5s;
+  user-select: none;
 }
 
 .autorization__button:hover {
@@ -138,6 +141,7 @@
   text-decoration: none;
   color: #3456f3;
   transition: opacity 0.5s;
+  user-select: none;
 }
 
 .autorization__link:hover {
@@ -149,6 +153,7 @@
   width: 38px;
   height: 38px;
   display: flex;
+  user-select: none;
 }
 
 @media screen and (max-width: 670px) {
@@ -160,7 +165,8 @@
 .autorization__tag {
   font-size: 10px;
   color: #a0a0a0;
-  margin: 10px 0 10px 0;
+  margin: 5px 0 10px 0;
+  user-select: none;
 }
 
 @media screen and (max-width: 500px) {
