--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,6 +4,7 @@
   padding: 110px 0 23px 0;
   margin: 0;
   border-bottom: 1px solid #000;
+  user-select: none;
 }
 
 @media screen and (max-width: 768px) {
