--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -41,3 +41,17 @@
   opacity: 80%;
   transition: opacity 0.5s;
 }
+
+.movies-card-list__button_disable {
+  z-index: -1;
+  opacity: 0;
+}
+
+.movies-card-list__title {
+  color: #000;
+  margin: 20px auto 29% auto;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
