--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,134 +1,106 @@
-.navigation__bar {
-  background-image: url(../../images/Navigation_1.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #fff;
-  border: none;
-  width: 44px;
-  height: 44px;
-  cursor: pointer;
-  padding: 0;
-  margin-right: 30px;
-  transition: opacity 0.5s;
-}
-
-.navigation__bar:hover {
-  opacity: 0.8;
-  transition: opacity 0.5s;
-}
-
-@media screen and (max-width: 320px) {
-  .navigation__bar {
-    margin-right: 14px;
-  }
-}
-
-.navigation__close {
-  background-image: url(../../images/Dislike_1.svg);
-  background-size: 22px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #fff;
-  border: none;
-  width: 44px;
-  height: 44px;
-  cursor: pointer;
-  padding: 0;
-  margin-right: 30px;
-  margin-left: auto;
-  transition: opacity 0.5s;
-  margin-top: 18px;
-}
-
-.navigation__close:hover {
-  opacity: 0.8;
-  transition: opacity 0.5s;
-}
-
-@media screen and (max-width: 320px) {
-  .navigation__close {
-    margin-right: 14px;
-  }
-}
-
-@keyframes navigation-opened {
-  0% {
-    right: -100px;
-  }
-  100% {
-    right: 0;
-  }
-}
-
-@keyframes navigation-closed {
-  0% {
-    right: 0;
-  }
-  100% {
-    right: -100px;
-  }
-}
-
-.navigation__menu {
-  position: fixed;
-  right: 0;
-  top: 0;
-  height: 100%;
-  width: 67.7vw;
-  background-color: #fff;
-  z-index: 0;
+.navigation {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 1s, z-index 1s, opacity 1s;
-  animation: navigation-closed 1s ease-in-out;
+  align-items:center;
+  width: 100%;
+}
+.navigation__group {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  width: 100%;
 }
 
-.navigation__menu_oppened {
-  visibility: visible;
-  z-index: 1;
-  opacity: 1;
-  animation: navigation-opened 1s ease-in-out;
+.navigation__block {
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  align-items: center;
+  margin-left: auto;
+}
+
+.navigation__button {
+  background-color: #3456f3;
+  width: 76px;
+  height: 32px;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  font-size: 12px;
+  cursor: pointer;
+  margin-right: 70px;
+  transition: opacity 0.5s;
+  user-select: none;
+}
+
+.navigation__button:hover {
+  opacity: 0.8;
+  transition: opacity 0.5s;
+}
+
+@media screen and (max-width: 768px) {
+  .navigation__button {
+    margin-right: 30px;
+  }
 }
 
 @media screen and (max-width: 670px) {
-  .navigation__menu {
+  .navigation__button {
+    font-size: 10px;
+    width: 54px;
+    height: 26px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .navigation__button {
     margin-right: 14px;
-    width: 100vw;
-    left: 0;
   }
 }
 
 .navigation__link {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  margin-top: 100px;
-}
-
-.navigation__title {
+  font-size: 12px;
   text-decoration: none;
   color: #000;
-  font-size: 18px;
   font-weight: 500;
-  max-width: 80px;
-  align-self: center;
-  margin-bottom: 15px;
-  padding-bottom: 10px;
+  margin-right: 30px;
   transition: opacity 0.5s;
 }
 
-.navigation__title:hover {
+.navigation__link:hover {
   opacity: 0.8;
   transition: opacity 0.5s;
 }
 
-.navigation__title:nth-child(3) {
-  max-width: 300px;
+@media screen and (max-width: 670px) {
+  .navigation__link {
+    font-size: 10px;
+    margin-right: 14px;
+  }
 }
 
-.navigation__title_active {
-  border-bottom: 2px solid #000;
+.navigation__menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  justify-items: start;
+  align-items: baseline;
+  margin-left: 44px;
+}
+
+.navigation__menu-link {
+  text-decoration: none;
+  color: #000;
+  font-size: 13px;
+  transition: opacity 0.5s;
+}
+
+.navigation__menu-link:hover {
+  opacity: 0.8;
+  transition: opacity 0.5s;
+}
+
+.navigation__menu-link_active {
+  font-weight: 500;
 }
