--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -3,6 +3,24 @@
   margin: auto;
 }
 
+@keyframes background-active {
+  0% {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+}
+
+@keyframes background-hide {
+  0% {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0);
+  }
+}
+
 .portfolio__link {
   display: flex;
   text-decoration: none;
@@ -10,14 +28,21 @@
   font-size: 30px;
   justify-content: space-between;
   border-bottom: 1px solid #e5e5e5;
+  background-color: #fff;
   margin: 0;
   transition: opacity 0.5s;
+  animation: background-hide 0.5s forwards;
+  user-select: none;
 }
+
 
 .portfolio__link:hover {
   opacity: 0.8;
   transition: opacity 0.5s;
+  animation: background-active 0.5s forwards;
 }
+
+
 
 .portfolio__link:nth-child(3) {
   border-bottom: none;
@@ -57,6 +82,7 @@
   font-size: 18px;
   color: #a0a0a0;
   font-weight: 400;
+  user-select: none;
 }
 
 @media screen and (max-width: 768px) {
