--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -41,12 +41,12 @@
 
 .preloader {
     display: flex;
-    align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px 0 20px 0;
+    margin-top: 150px;
 }
 
 .preloader__container {
