--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -10,6 +10,7 @@
   background-color: #e8e8e8;
   border-radius: 10px;
   text-align: center;
+  user-select: none;
 }
 
 @media screen and (max-width: 768px) {
