--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import url(./components/Header/Header.css);
 @import url(./components/Account/Account.css);
 @import url(./components/Navigation/Navigation.css);
+@import url(./components/NavMob/NavMob.css);
 @import url(./components/Main/Main.css);
 @import url(./components/Promo/Promo.css);
 @import url(./components/AboutProject/AboutProject.css);
