--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,7 +10,7 @@ input:focus {
   border-radius: 5px;
 }
 
-a:focus {
+a:focus-visible {
   outline: 0.5px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
