--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -32,6 +32,8 @@
   justify-self: end;
   padding: 0;
   z-index: 2;
+  opacity: 0;
+  transition: opacity 0.5s;
 }
 
 .movies-card__delete_disable {
