--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -51,3 +51,8 @@ button:focus {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   border-radius: 30px;
 }
+
+.root__index {
+  visibility: hidden;
+  position:absolute;
+}
