--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -44,7 +44,7 @@
   opacity: 1;
 }
 
-.movies-card__image {
+.movies-card__link {
   overflow: hidden;
   object-fit: cover;
   height: 201px;
@@ -53,17 +53,43 @@
   width: 360px;
   grid-row: 1;
   grid-column: 1/3;
+  transition: all .5s ease-out;
+}
+
+.movies-card__link:hover{
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.movies-card__image {
+  overflow: hidden;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 6px;
+  object-position: center;
+  width: 100%;
+  grid-row: 1;
+  grid-column: 1/3;
+  transition: all .5s ease-out;
+}
+
+.movies-card__image:hover{
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  width: 110%;
+  height: 110%;
+  margin: -5% -5% -5% -5%;
 }
 
 @media screen and (max-width: 1220px) {
-  .movies-card__image {
+  .movies-card__link {
     width: 339px;
     height: 190px;
   }
 }
 
 @media screen and (max-width: 750px) {
-  .movies-card__image {
+  .movies-card__link {
     width: 300px;
     height: 168px;
   }
@@ -142,7 +168,7 @@
   background-image: url(../../images/Like_1.svg);
   background-repeat: no-repeat;
   background-color: #ee3465;
-  background-position: center;
+  background-position: 6px;
   background-size: 45%;
   border: none;
   width: 21px;
